[metadata]
name = dcpkg
version = 1.0.2
author = Dwaipayan Chakroborti
author_email = dcgkpindiastudy@gmail.com
description = Package to make work easy in Python
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/dcgkpindiastudy/dcmlpack
project_urls =
    Bug Tracker = https://github.com/dcgkpindiastudy/dcmlpack/issues
    repository = https://github.com/dcgkpindiastudy/dcmlpack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src